# Salt

./: .gitignore  readme.md
.github/workflows/: c++cli.yml  main.yml
C++/: .gitignore  CMakeLists.txt  LICENSE  conanfile.txt  readme.md
C++/include/: apple_OSSpec.hpp  defaultCurl.hpp  gaptToolkit.hpp  linux_OSSpec.hpp  settingsToolkit.hpp  windows_OSSpec.hpp
C++/resources/: icon.rc
C++/source/: main.cpp
creator-tools/: Make URL List.sh  convertToNew.js  fetch_list.sh  format.js  merge.js  package.json  scrape-nometa.js  scrape.js
icons/: Rom_Downloader.res
nodejs/: .eslintrc.json  .gitignore  .jsbeautifyrc  BuildExecutables.js  LICENSE  main.js  package.json  readme.md  salt.js
